--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "mongoose": "^8.18.1",
     "motion": "^12.23.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
